--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-google-button": "^0.7.2",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
-    "react-tabs": "^6.0.1"
+    "react-tabs": "^6.0.1",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
