--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
     "react-tabs": "^6.0.1",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "sweetalert2": "^11.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
