--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-icons": "^4.8.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.11.2",
     "react-tabs": "^6.0.1",
     "react-toastify": "^9.1.3",
