--- a/package.json
+++ b/package.json
@@ -7,34 +7,39 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.4",
-    "@studio-freight/lenis": "^1.0.19",
-    "firebase": "^9.22.0",
+    "@apollo/client": "^3.8.5",
+    "@studio-freight/lenis": "^1.0.26",
+    "firebase": "^10.4.0",
     "graphql": "^16.8.1",
     "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.11.0",
     "react-loading-skeleton": "^3.3.1",
-    "react-router-dom": "^6.11.2",
+    "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
-    "sweetalert2": "^11.7.5"
+    "sweetalert2": "^11.7.32"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-jest": "^27.4.2",
-    "eslint-plugin-react": "^7.32.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/react": "^18.2.25",
+    "@types/react-dom": "^18.2.10",
+    "@vitejs/plugin-react": "^4.1.0",
+    "eslint": "^8.50.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "jest": "^29.7.0",
-    "vite": "^4.3.2"
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "happy-dom": "^12.9.0",
+    "jsdom": "^22.1.0",
+    "react-test-renderer": "^18.2.0",
+    "vite": "^4.4.11",
+    "vitest": "^0.34.6"
   }
 }
