--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "@vitejs/plugin-react": "^4.1.0",
     "@vitest/coverage-v8": "^0.34.6",
     "@vitest/ui": "^0.34.6",
+    "cross-fetch": "^4.0.0",
     "eslint": "^8.50.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "happy-dom": "^12.9.0",
     "jsdom": "^22.1.0",
+    "msw": "^1.3.2",
     "react-test-renderer": "^18.2.0",
     "vite": "^4.4.11",
     "vitest": "^0.34.6"
