--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest --ui",
+    "test": "vitest run",
+    "testui": "vitest --ui",
     "coverage": "vitest run --coverage",
     "prepare": "husky install"
   },
