--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest run",
+    "test": "vitest run && lint-staged",
     "testui": "vitest --ui",
     "coverage": "vitest run --coverage",
     "prepare": "husky install"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx}": "eslint"
   },
   "dependencies": {
     "@apollo/client": "^3.8.5",
@@ -43,11 +46,12 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "happy-dom": "^12.9.0",
+    "husky": "^8.0.0",
     "jsdom": "^22.1.0",
+    "lint-staged": "^14.0.1",
     "msw": "^1.3.2",
     "react-test-renderer": "^18.2.0",
     "vite": "^4.4.11",
-    "vitest": "^0.34.6",
-    "husky": "^8.0.0"
+    "vitest": "^0.34.6"
   }
 }
