--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^10.4.0",
     "graphql": "^16.8.1",
     "gsap": "^3.12.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
