--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "graphql": "^16.8.1",
     "gsap": "^3.12.2",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
