--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest run && lint-staged",
-    "testui": "vitest --ui",
-    "coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "prepare": "husky install"
   },
   "lint-staged": {
